
v2.0.1
~ Added: A translation for IdleReturnHome.
~ Changed: Modified the sector sorting process from a mix of distance and jump count checks to the usage of estimate_travel_time.
~ Changed: Enhanced script execution speed by altering wait segments from 1000ms to 1ms.
~ Optimized: The TradeSubscriptionExplorer fleet management is now more streamlined and stable, thanks to the utilization of in-game functionality.
~ Optimized: Generic code optimizations have been carried out for improved performance.

v2.0.2 -- Current Published version
~ Added: Implemented a check to clear the internal blacklist of ships that have been destroyed.
~ Added: The ship will now continue with the next Station as soon it has updated the Station's Trade Subscription.
~ Added: The script now calcualtes a path to the target sector and subsequently runs the 'move.generic' command for every gate/highway in the path.
~ Fixed: Resolved an issue where the ship was sometimes unable to reach a sector or would halt after a jump.
~ Fixed: German translation of 'Werft' is now 'Raumdock'.
~ Fixed: The internal blacklist was being cleared when the script was reloaded. This caused the ship to forget which sector it was working in. 
         Given the sorting process via estimate_time, the ship might choose to go to another sector even though it had work remaining in its current sector.
~ Changed: The script now calculates its own safe position instead of using the 'get_safe_pos' command from Egosoft, which hasn't been working properly in some cases.

v2.0.3 -- Current Development Version
~ Added: A option to ignore ownerless sectors.
~ Added: Option to enable/disable notifications and logging in logbook.
~ Added: Message and logbook entry when the ship has uncovered an Object. (Optional)
~ Added: The mod now utilizes the JP_ScriptLibrary for some functions, reducing code volume and streamlining the addition and fixing of code.
~ Updated: Some minor code and translation changes.