@@ -25,4 +25,5 @@ v2.0.3 -- Current Development Version
 ~ Added: Option to enable/disable notifications and logging in logbook.
 ~ Added: Message and logbook entry when the ship has uncovered an Object. (Optional)
 ~ Added: The mod now utilizes the JP_ScriptLibrary for some functions, reducing code volume and streamlining the addition and fixing of code.
+~ Added: A variable has been added to store the ship's initial position/sector when the script is activated. This ensures that the ship will return to its starting position/sector when no Idle option is selected.
 ~ Updated: Some minor code and translation changes.
